[gd_scene load_steps=3 format=3 uid="uid://b0v3mt77eqrb2"]

[ext_resource type="Script" uid="uid://rhxarwlk1bhd" path="res://ui/screens/network/lobby/teams/add_team_button.gd" id="1_hl5p2"]
[ext_resource type="StyleBox" uid="uid://bx7n370nw0r0" path="res://ui/screens/network/lobby/teams/UIPanel.tres" id="2_ru7ab"]

[node name="AddTeamButton" type="MarginContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 184.0
offset_bottom = 143.0
size_flags_horizontal = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
script = ExtResource("1_hl5p2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("2_ru7ab")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Add a new team !"
horizontal_alignment = 1

[node name="TeamName" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
placeholder_text = "Team Name"
alignment = 1
expand_to_text_length = true

[node name="CreateButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Add team"
